# cir_radar

./: .gitignore  .~lock.problem.odt#  CMakeLists.txt  README.md
config/: radar_params.ini  radar_params_backup.ini
config/Module/: UAV_CNN.pt
config/Unknow_radar/Azimuth_angle_coeff/: Data.csv  Data.txt  Data_order3.csv
config/Unknow_radar/Pitch_angle_coeff/: pit_angle_coeff_01.csv  pit_angle_coeff_23.csv  pit_angle_coeff_34.csv
config/Unknow_radar/Recv_amp_compensate_data/: Data.csv
config/Unknow_radar/Recv_beam_calibrate_data/: DBF.csv  Data.csv
config/Unknow_radar/Recv_phase_compensate_data/: Data.csv
config/Unknow_radar/Recv_phase_data/: Amp-Freq0.csv  Amp-Freq10.csv  Amp-Freq12.csv  Amp-Freq17.csv  Amp-Freq19.csv  Amp-Freq5.csv  Amp-Freq7.csv  Freq0.xlsx  Freq1.csv  Freq11.csv  Freq12.xlsx  Freq13.csv  Freq15.csv  Freq15.xlsx  Freq18.csv  Freq18.xlsx  Freq3.xlsx  Freq4.csv  Freq6.xlsx  Freq7.csv  Freq9.xlsx  Verify-Freq6.csv
config/Unknow_radar/STC_compensate_data/Mid_range/: STC_compensate_mtd.csv
config/Unknow_radar/STC_compensate_data/STC预补偿/: STC_compensate.csv  STC_compensate_exp.csv
config/Unknow_radar/STC_compensate_data/Short_range/: STC_compensate_beam.csv  STC_compensate_mtd.csv
config/Unknow_radar/STC_compensate_data/中程模式/: stc_mr_pit0_n_4us.csv  stc_mr_pit0_w_48us.csv  stc_mr_pit2_n_4us.csv  stc_mr_pit3_w_15us.csv  stc_mr_pit4_w_10us.csv
config/Unknow_radar/STC_compensate_data/近程模式/: stc_sr_pit3_n_3us.csv
config/Unknow_radar/Trans_beam_calibrate_data/: Data.csv
config/Unknow_radar/Trans_phase_data/: Amp-Freq0.csv  Amp-Freq1.csv  Amp-Freq10.csv  Amp-Freq11.csv  Amp-Freq12.csv  Amp-Freq13.csv  Amp-Freq14.csv  Amp-Freq15.csv  Amp-Freq16.csv  Amp-Freq17.csv  Amp-Freq18.csv  Amp-Freq19.csv  Amp-Freq2.csv  Amp-Freq20.csv  Amp-Freq3.csv  Amp-Freq4.csv  Amp-Freq5.csv  Amp-Freq6.csv  Amp-Freq7.csv  Amp-Freq8.csv  Amp-Freq9.csv  Freq0.csv  Freq1.csv  Freq10.csv  Freq11.csv  Freq12.csv  Freq13.csv  Freq14.csv  Freq15.csv  Freq16.csv  Freq17.csv  Freq18.csv  Freq19.csv  Freq2.csv  Freq20.csv  Freq3.csv  Freq4.csv  Freq5.csv  Freq6.csv  Freq7.csv  (+2 more)
config/V4_3_003/: radar_params.ini
config/V4_3_003/Pitch_angle_coeff/: pit_angle_coeff_12.csv
config/V4_3_003/Recv_amp_compensate_data/: Data.csv
config/V4_3_003/Recv_beam_calibrate_data/: DBF.csv  Data.csv
config/V4_3_003/Recv_phase_compensate_data/: Data.csv
config/V4_3_003/Recv_phase_data/: Freq0.csv  Freq1.csv  Freq10.csv  Freq11.csv  Freq12.csv  Freq13.csv  Freq14.csv  Freq15.csv  Freq16.csv  Freq17.csv  Freq18.csv  Freq19.csv  Freq2.csv  Freq20.csv  Freq3.csv  Freq4.csv  Freq5.csv  Freq6.csv  Freq7.csv  Freq8.csv  Freq9.csv
config/V4_3_003/STC_compensate_data/STC预补偿/: STC_compensate_3stage_rmpeaks.csv  STC_compensate_chn.csv  STC_compensate_old.csv
config/V4_3_003/STC_compensate_data/中程模式/: stc_mr_pit2_w_25us.csv  stc_mr_pit3_n_2us.csv  stc_mr_pit4_n_2us.csv
config/V4_3_003/Trans_beam_calibrate_data/: Data.csv
config/V4_3_003/Trans_phase_data/: Freq0.csv  Freq1.csv  Freq10.csv  Freq11.csv  Freq12.csv  Freq13.csv  Freq14.csv  Freq15.csv  Freq16.csv  Freq17.csv  Freq18.csv  Freq19.csv  Freq2.csv  Freq20.csv  Freq3.csv  Freq4.csv  Freq5.csv  Freq6.csv  Freq7.csv  Freq8.csv  Freq9.csv
include/: common.cuh  cuda_abs.cuh  cuda_add_win.cuh  cuda_dbf.cuh  cuda_pc.cuh  cuda_signal_process.hpp  cuda_transpose.cuh  data_read.hpp  rsl_cfar.hpp  rsl_data_structure.hpp  rsl_radar_params_manager.hpp  rsl_win_func_manager.hpp
include/basic_components/: thread_safety_queue.hpp
include/debug_tool/: debug_tools.hpp  rsl_rsp_data_save.hpp
include/signal_process/dbf/: rsl_dbf.hpp  rsl_dbf_base.hpp
include/simpleIni/: SimpleIni.h
source/: cuda_signal_process.cpp  main.cpp  problem.md  report.md
source/cuda_signal_process/: cuda_abs.cu  cuda_add_win.cu  cuda_common.cu  cuda_dbf.cu  cuda_pc.cu  cuda_transpose.cu
source/data_read/: data_read.cpp  rsl_data_structure.cpp  rsl_radar_params_manager.cpp
source/debug_tool/: debug_tools.cpp  rsl_rsp_data_save.cpp
source/window/: rsl_win_func_manager.cpp
(+2 files in other folders)
